knative/kourier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kourier-system
  namespace: kourier-system
spec:
  ingressClassName: nginx
  rules:
  - host: .traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serviceweb
            port:
              number: 80
